# rsyscall

./: .gitignore  README.org  default.nix  dirfd.c  flake.nix  getdents.c  intro.org  mmap_growsdown.c  notes.org  overlay.nix  pinned.nix  sockopen.c  stat.c  test_epoll_signalfd.c
c/: Makefile.am  SConstruct  check_robust_list.c  configure.ac  default.nix  package.nix  rsyscall.pc.in  test.py  test.sh
c/src/: cat.c  do_cloexec_main.c  in_to_remote_out.c  persistent_server.c  remote_cat.c  rsyscall.c  rsyscall.h  rsyscall_bootstrap.c  rsyscall_server_main.c  rsyscall_stdin_bootstrap.c  rsyscall_unix_stub.c  rsyscall_x86_64.S  socket_binder.c
docs/: advanced_threading.org  background.org  conceptual.org  misc_explanations.org  multi_threaded.org  pitch.org  single_threaded.org
docs/perspective_intros/: README.org  capability.org  djbware.org  high_performance.org  infracode.org  language_implementer.org  rpc.org
nixdeps/: default.nix  package.nix  setup.py
nixdeps/nixdeps/: __init__.py  load.py  setuptools.py
python/: MANIFEST.in  README  README.rst  SConstruct  benchmark.py  clone_bench.py  default.nix  ffibuilder.py  hydra.conf  mypy.ini  package.nix  pyproject.toml  requirements.txt  setup.cfg  setup.py  shell.sh  subprocess_bench.py  test.py
python/arepl/: __init__.py  acompile.py  aeval.py  astcodeop.py  help.py  repl.py
python/arepl/tests/: __init__.py  test_repl.py
python/dneio/: __init__.py  concur.py  core.py
python/kiselio/: __init__.py  concur.py  core.py  outcome.py
python/mail/: dovecot.conf
python/nixdeps/: __init__.py  load.py  setuptools.py
python/renderexpr/: renderexpr.py
python/renderexpr/tests/: test_renderexpr.py
python/rsysapps/: hydra.py  mail.py  miredo.py  powerdns.py
python/rsyscall/: __init__.py  active.py  base.py  batch.py  capabilities.py  command.py  concurrency.py  ctypes.py  dns.py  dnspython_LUA.py  environ.py  epoll.py  epoller.py  far.py  fcntl.py  global.py  handle.py  hydra.py  inotify.py  inotify_watch.py  io.py  limits.py  loader.py  local.py  local_executables.py  mail.py  memint.py  memory.py  memory_abstracted_syscalls.py  miredo.py  misc.py  mktemp.py  monitor.py  near.py  network.py  nginx.py  nix.py  path.py  powerdns.py  raw_syscalls.py  (+20 more)
python/rsyscall/doc/: __init__.py  syscall_api.py
python/rsyscall/handle/: __init__.py  fd.py  mmap.py  pointer.py  process.py
python/rsyscall/linux/: __init__.py  dirent.py  fs.py  fuse.py  futex.py  memfd.py  netlink.py  rtnetlink.py
python/rsyscall/memory/: __init__.py  allocation_interface.py  allocator.py  ram.py  socket_transport.py  span.py  transport.py
python/rsyscall/near/: __init__.py  sys.py  sysif.py  types.py
python/rsyscall/net/: __init__.py  if_.py
python/rsyscall/netinet/: __init__.py  in_.py  ip.py  tcp.py
python/rsyscall/netlink/: address.py
python/rsyscall/network/: __init__.py  connection.py
python/rsyscall/scripts/: __init__.py  local_repl.py  nix_runner.py  symsh.py
python/rsyscall/stdlib/: __init__.py  mktemp.py
python/rsyscall/sys/: __init__.py  capability.py  epoll.py  eventfd.py  inotify.py  ioctl.py  memfd.py  mman.py  mount.py  prctl.py  resource.py  signalfd.py  socket.py  stat.py  syscall.py  timerfd.py  uio.py  un.py  wait.py
python/rsyscall/tasks/: __init__.py  base_sysif.py  clone.py  common.py  connection.py  exceptions.py  exec.py  fork.py  local.py  non_child.py  persistent.py  ssh.py  ssh_bootstrap.sh  stdin_bootstrap.py  stub.py  util.py
python/rsyscall/tests/: __init__.py  test_allocator.py  test_benchmark.py  test_cat.py  test_chroot.py  test_clone.py  test_concurrency.py  test_epoll.py  test_epoller.py  test_eventfd.py  test_exec.py  test_fd.py  test_fork.py  test_fs.py  test_fuse.py  test_inotify.py  test_io.py  test_ip.py  test_misc.py  test_mmap.py  test_net.py  test_nginx.py  test_nix.py  test_persistent.py  test_pidns.py  test_pipe.py  test_pointer.py  test_prctl.py  test_proc.py  test_repl.py  test_resource.py  test_rsyscall.py  test_sched.py  test_seek.py  test_setuid.py  test_signal.py  test_socket.py  test_ssh.py  test_stdinboot.py  test_stub.py  (+4 more)
python/rsyscall/unistd/: __init__.py  credentials.py  cwd.py  exec.py  io.py  pipe.py
python/wish/: __init__.py
research/: README.org  default.nix  extensible_visitor.py  interp.nix  kernel_wishlist.org  notes.org  nowait.c  pidns.c  run_in_build.nix  sleeper.py  test_epoll_signalfd.c  very_old_notes.org
research/paper/: .gitignore  Makefile  analyze_clone_with_mmap.py  benchmark.py  bibliography.bib  clone.c  ease.py  ease.tex  getpid_bench.py  getpid_bench_plot.py  native.c  notes.org  paper.org  paper.tex  rsys_vs_subp_bench.py  usenix2019_v3.sty
research/paper/examples/basic/: direct.py  fork.py
research/paper/examples/fds/: direct.py  fork.py
research/paper/examples/fuse/: direct.py  fork.py
research/paper/examples/mount/: direct.py  fork.py
research/paper/examples/pidns/: direct.py  fork.py
research/paper/examples/pipe/: direct.py  fork.py
research/paper/examples/unmount/: direct.py  fork.py
research/sigbovik2020/: README.org  bibliography.bib  example.sh  paper.tex  prog.c
